# mobileOS

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/dialer/: Cargo.toml  build.rs
apps/dialer/src/: main.rs
apps/dialer/ui/: dialer.slint
apps/messages/: Cargo.toml  build.rs
apps/messages/src/: main.rs
apps/messages/ui/: messages.slint
apps/settings/: Cargo.toml  build.rs
apps/settings/src/: main.rs
apps/settings/ui/: settings.slint
apps/terminal/: Cargo.toml  build.rs
apps/terminal/src/: main.rs
apps/terminal/ui/: terminal.slint
compositor/: Cargo.toml
compositor/src/: handlers.rs  input.rs  main.rs  state.rs  udev.rs  winit.rs
initd/: Cargo.toml
initd/src/: config.rs  dependency.rs  logging.rs  main.rs  mount.rs  service.rs  shutdown.rs  signals.rs
rootfs/etc/mos/services/: 01-console.toml  01-dbus.toml  01-seatd.toml  02-compositor.toml  03-shell.toml  10-power.toml  11-audio.toml  12-network.toml  13-modem.toml  14-sensors.toml
services/audio/: Cargo.toml
services/audio/src/: main.rs
services/modem/: Cargo.toml
services/modem/src/: main.rs
services/network/: Cargo.toml
services/network/src/: main.rs
services/power/: Cargo.toml
services/power/src/: main.rs
services/sensors/: Cargo.toml
services/sensors/src/: main.rs
shell/: Cargo.toml  build.rs
shell/src/: main.rs
shell/ui/: shell.slint
tools/image-builder/: build-qemu.sh
