# ABOUTME: Workspace root for MobileOS — a Unix-like mobile OS with a Rust userspace.
# ABOUTME: Defines all crates in the project and shared dependency versions.

[workspace]
resolver = "2"
members = [
    "initd",
    "compositor",
    "shell",
    "services/power",
    "services/modem",
    "services/network",
    "services/audio",
    "services/sensors",
    "apps/dialer",
    "apps/messages",
    "apps/settings",
    "apps/terminal",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/hfetoui/mobileOS"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
zbus = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rustix = { version = "1", features = ["fs", "mount", "process", "system"] }
signal-hook = "0.3"
