# ABOUTME: MobileOS init system (PID 1).
# ABOUTME: Mounts filesystems, starts services, and supervises the process tree.

[package]
name = "mos-initd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustix = { workspace = true }
