# ABOUTME: MobileOS init system (PID 1).
# ABOUTME: Mounts filesystems, starts services, and supervises the process tree.

[package]
name = "mos-initd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
