[package]
name = "mos-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "backend-winit-wayland", "renderer-femtovg"] }
chrono = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
slint-build = "1"
