[package]
name = "mos-dialer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }
tokio = { workspace = true }
zbus = "5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
slint-build = "1"
