[package]
name = "mos-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }
rustix = { version = "1", features = ["pty", "termios", "fs", "process"] }
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
slint-build = "1"
