[package]
name = "mos-modem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
hardware = []

[dependencies]
tokio = { workspace = true }
zbus = "5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
zbus = "5"
